crates/marain-core/tests/fixtures/errors/13_missing_return_type.lat
functio f() dat :
    dic "x".
